# online-theatre

./: .env.example  .env.sample  .gitignore  Dockerfile  README.md  compose.ad.yaml  compose.ad.yml  compose.billing.yaml  compose.dev.yaml  compose.faker.yaml  compose.lint.yaml  compose.override.example.yaml  compose.tests.yaml  compose.yaml  docker-compose.yml  run_lint.sh  run_server.sh  run_tests.sh
compose/auth/: Dockerfile  alembic.ini  pyproject.toml
compose/auth/auth/: main.py
compose/auth/auth/alembic/: env.py
compose/auth/auth/alembic/versions/: 198a9266168f_initial.py  378be04515c3_oauth_account.py  3c9d17ab4206_oauth_account.py  43c1184f96fa_fix_migrations.py  917d74037842_partition_login_history.py
compose/auth/auth/core/: config.py  logger.py
compose/auth/auth/db/: base.py  models.py  sqlalchemy.py
compose/auth/auth/models/: __init__.py  login_history.py  making_partitions.py  roles.py  sqlalchemy.py  users.py  users_roles.py
compose/auth/auth/repositories/: role.py
compose/auth/auth/schemas/: role.py
compose/auth/auth/services/: role.py
compose/auth/auth/services/permissions/: models.py  repository.py  service.py
compose/auth/auth/services/roles/: exceptions.py  models.py  repository.py  service.py
compose/auth/auth/services/users/: __init__.py  db.py  exceptions.py  manager.py  openapi.py  password.py  routers.py  schemas.py  users.py
compose/auth/commands/: init.sh
compose/auth/postgresql/: database.sql
compose/auth/scripts/: cli.py
compose/billing/billing/: Dockerfile  alembic.ini  pyproject.toml
compose/billing/billing/commands/: init.sh  mypy.sh  ruff.sh
compose/billing/billing/src/: main.py
compose/billing/billing/src/alembic/: env.py
compose/billing/billing/src/core/: config.py
compose/billing/billing/src/db/: sqlalchemy.py
compose/billing/billing/src/dependencies/: __init__.py  httpx.py
compose/billing/billing/src/models/: auth.py  billing.py  sqlalchemy.py
compose/billing/billing/src/schemas/: admin_payments.py
compose/billing/billing/src/service/: exceptions.py  models.py  payment.py
compose/billing/billing/src/services/: admin_payments.py  exceptions.py  models.py  payment.py
compose/billing/billing/src/tests/: integration.py
compose/billing/payment/: Dockerfile  pyproject.toml
compose/billing/payment/commands/: fastapi.sh  gunicorn.sh  mypy.sh  ruff.sh
compose/billing/payment/payment/: main.py
compose/billing/payment/payment/core/: config.py
compose/billing/payment/payment/database/: redis.py
compose/billing/payment/payment/services/: rabbitmq.py  redis.py  yoomoney.py
compose/billing/payment/src/: main.py
compose/notification/admin_panel/: Dockerfile  pyproject.toml
compose/notification/admin_panel/admin_panel/: main.py
compose/notification/admin_panel/admin_panel/alembic/: env.py
compose/notification/admin_panel/admin_panel/core/: __init__.py
compose/notification/admin_panel/admin_panel/models/: admin_notification.py
compose/notification/admin_panel/admin_panel/schemas/: admin_notification.py
compose/notification/admin_panel/admin_panel/services/: admin_notification.py  exceptions.py
compose/notifications/admin_panel/: Dockerfile  alembic.ini  pyproject.toml
compose/notifications/admin_panel/admin_panel/: main.py  scheduler.py
compose/notifications/admin_panel/admin_panel/core/: config.py
compose/notifications/admin_panel/admin_panel/db/: postgres.py  redis.py
compose/notifications/admin_panel/admin_panel/models/: admin_notification.py  enums.py
compose/notifications/admin_panel/admin_panel/schemas/: scheduler.py  template.py
compose/notifications/admin_panel/admin_panel/services/: admin_notification.py  exceptions.py  scheduler.py  template.py
compose/notifications/admin_panel/commands/: fastapi.sh  gunicorn.sh  mypy.sh  ruff.sh
compose/notifications/queue/: Dockerfile  pyproject.toml
compose/notifications/queue/commands/: fastapi.sh  gunicorn.sh  mypy.sh  worker.sh
compose/notifications/queue/notifications_queue/: broker.py  main.py
compose/notifications/queue/notifications_queue/core/: config.py
compose/notifications/queue/notifications_queue/services/: email_send.py  rabbitmq.py
compose/notifications/queue/notifications_queue/tasks/: __init__.py  notifications.py
compose/ugc/ugc/: Dockerfile  hypercorn_start.sh  pyproject.toml
compose/ugc/ugc/core/: config.py  utils.py
compose/ugc/ugc/models/: event.py
compose/ugc/ugc/repositories/: app.py  event.py
compose/ugc_mongo/: Dockerfile  pyproject.toml
compose/ugc_mongo/commands/: hypercorn.sh  mypy.sh  ruff.sh
compose/ugc_mongo/ugc/: main.py
compose/ugc_mongo/ugc/core/: settings.py
compose/ugc_mongo/ugc/models/: mongo.py
compose/ugc_mongo/ugc/services/: bookmark.py  exceptions.py  rate.py  review.py
src/: Dockerfile  main.py  pyproject.toml  requirements.txt
src/api/v1/: films.py
src/commands/: fastapi.sh  mypy.sh
src/core/: logger.py
src/data_warehouse_benchmarks/: clickhouse_benchmark.md
src/data_warehouse_benchmarks/test_clickhouse/: benchmark_clickhouse.py  helpers.py
src/models/: film.py
src/movies/: main.py
src/movies/api/v1/: films.py
src/movies/api/v1/dependencies/: page.py
src/movies/api/v1/endpoints/: films.py  genres.py  persons.py
src/movies/api/v1/models/: films.py  (+2 more)
src/movies/core/: __init__.py  config.py
src/movies/db/: elastic.py  redis.py
src/movies/models/: film.py  person.py
src/movies/services/: __init__.py  abstract.py  film.py  genre.py  person.py  search.py
src/movies/services/auth/: token.py  user.py
src/movies/services/cache/: __init__.py  cache.py  parameterized.py  service.py
src/movies/services/search/: __init__.py  backend.py  cache.py  service.py
src/services/: film.py
tests/: Dockerfile  pyproject.toml
tests/commands/: mypy.sh  pytest.sh
tests/tests/: conftest.py
tests/tests/functional/: conftest.py  settings.py
tests/tests/functional/fixtures/: fixture_auth_postgresql.py  fixture_mongo.py  fixture_rate_limiter.py  fixture_roles.py
tests/tests/functional/src/: test_elasticsearch.py  test_redis.py
(+351 files in other folders)
