[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

backoff = "2.2.1"
elasticsearch = { version = "8.16.0", extras = ["async"] }
fastapi = { version = "0.115.6", extras = ["standard"] }
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
redis = { version = "5.2.1", extras = ["hiredis"] }
uvicorn-worker = "0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
