[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

backoff = "2.2.1"
clickhouse-driver = "^0.2.9"
elasticsearch = { version = "8.16.0", extras = ["async"] }
faker = "33.1.0"
fastapi = { version = "0.115.6", extras = ["standard"] }
opentelemetry-api = "1.29.0"
opentelemetry-exporter-otlp-proto-http = "1.29.0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-instrumentation-fastapi = "0.50b0"
opentelemetry-propagator-jaeger = "1.29.0"
opentelemetry-sdk = "1.29.0"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
redis = { version = "5.2.1", extras = ["hiredis"] }
uvicorn-worker = "0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
