[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

aiohttp = "^3.11.11"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
