[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

asyncpg = "0.30.0"
fastapi = { version = "0.115.6", extras = ["standard"] }
fastapi-users = { version = "14.0.1", extras = ["sqlalchemy"] }
pydantic = "2.10.5"
pydantic-settings = "2.7.1"
SQLAlchemy = { version = "2.0.37", extras = ["asyncio"] }
uvicorn-worker = "0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
