[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

asyncpg = "0.30.0"
backoff = "2.2.1"
fastapi = { version = "0.115.6", extras = ["standard"] }
pwdlib = { version = "0.2.1", extras = ["argon2", "bcrypt"] }
pydantic = { version = "2.10.5", extras = ["email"] }
pydantic-settings = "2.7.1"
PyJWT = { version = "2.10.1", extras = ["crypto"] }
redis = { version = "5.2.1", extras = ["hiredis"] }
SQLAlchemy = { version = "2.0.37", extras = ["asyncio"] }
uvicorn-worker = "0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
