[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = { version = "0.115.11", extras = ["standard"] }
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
uvicorn-worker = "0.3.0"
aiohttp = "^3.11.11"
alembic = "^1.15.1"
sqlalchemy = { version = "2.0.40", extras = ["asyncio"] }
asyncpg = "0.30.0"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.10.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
