[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = { version = "0.115.11", extras = ["standard"] }
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
uvicorn-worker = "0.3.0"
aiohttp = "^3.11.11"
alembic = "^1.15.1"
sqlalchemy = { version = "2.0.40", extras = ["asyncio"] }
asyncpg = "0.30.0"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.10.0"

# ——————— Настройки Ruff ———————

[tool.ruff]
exclude = [
    # Исключенные директории и файлы для линтинга
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
extend-select = [
  "E",    # PEP8‑ошибки
  "W",    # предупреждения
  "C",    # complexity
  "F",    # flake8‑style
  "N",    # нейминг
  "D",    # docstring‑правила
  "I",
]
ignore = [
  "D203",
  "D212",
  "D104",
  "D100",
]
fixable = ["ALL"]
preview = true

# ——————— Настройки mypy ———————

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
