[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = { version = "0.115.11", extras = ["standard"] }
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
uvicorn-worker = "0.3.0"
aiohttp = "^3.11.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
