[project]
name = "payment"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

asyncpg = "0.30.0"
fastapi = { version = "0.115.11", extras = ["standard"] }
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
uvicorn-worker = "0.3.0"
aiohttp = "^3.11.11"
redis = "5.2.1"
requests = "2.32.3"
aio-pika = "9.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
