[project]
name = "admin-panel"
version = "0.1.0"
description = "Administrative panel for project managers to create mailings."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
sqlalchemy = "^2.0.39"
pydantic = "^2.10.6"
alembic = "^1.15.1"
fastapi-pagination = "^0.12.34"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
