[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

fastapi = { version = "0.115.11", extras = ["standard"] }
pydantic = { version = "2.10.6", extras = ["email"] }
pydantic-settings = "2.8.1"
taskiq = { version = "0.11.14", extras = ["reload"] }
taskiq-aio-pika = "0.4.1"
taskiq-fastapi = "0.3.4"
taskiq-redis = "1.0.3"
uvicorn-worker = "0.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.10.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
